kubectl_deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prepare-probation-courtcases
  labels:
    app: prepare-probation-courtcases
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prepare-probation-courtcases
  template:
    metadata:
      labels:
        app: prepare-probation-courtcases
    spec:
      containers:
        - name: prepare-probation-courtcases
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/probation-services/prepare-probation-courtcases:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
